add twitter oauth

--- a/dest/html/retweetSet.html
+++ b/dest/html/retweetSet.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>retweet set</title>
-    <script type="text/javascript" src="../oauth/chrome_ex_oauthsimple.js"></script>
-    <script type="text/javascript" src="../oauth/chrome_ex_oauth.js"></script>
-    <script type="text/javascript" src="../js/twitter.js"></script>
+    <script type="text/javascript" src="../js/retweetSet.js"></script>
   </head>
   <body>
     <button>retweet</button>
