add tweetCard & fix oauth bug

--- a/dest/html/retweetSet.html
+++ b/dest/html/retweetSet.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <title>retweet set</title>
     <script type="text/javascript" src="../js/retweetSet.js"></script>
+    <script type="text/javascript" src="../js/twitterSetup.js"></script>
+<!--    <link rel="stylesheet" type="text/css" href="../css/tweet-card.css">
+-->
   </head>
   <body>
+    <div id="tweetcard"></div>
     <button>retweet</button>
   </body>
 </html>
